--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,47 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+next.js build output
+.next/
+out/
 
-# dependencies
+node_modules
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.cjs
 
-# testing
-/coverage
+dependencies
+/node_modules
+/.pnpm-store
 
-# next.js
-/.next/
-/out/
+local .env files
+.env*.local
+.env
 
-# production
-/build
+typescript
+*.tsbuildinfo
 
-# misc
-.DS_Store
-*.pem
+next.js specific
+.next
+.swc
+/out
+/public/.next
 
-# debug
+logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+.log
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+misc
+.DS_Store
+*.seed
+*.sql
+*.sqlite
+*.sqlite3
+.idea/
+.vscode/
+.vs/
+.history
+.tmp/
+.web/
+.parcel-cache/
+.eslintcache
